fix: 修改了部门分类列表的查询的逻辑